Add CrestApps.OrchardCore.AI.Chat.Interactions.Documents project

--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Documents/Views/ChatInteractionDocuments.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Documents/Views/ChatInteractionDocuments.Edit.cshtml
@@ -1,3 +1,4 @@
+@using CrestApps.OrchardCore.AI.Chat.Interactions.Documents.ViewModels
 @using CrestApps.OrchardCore.AI.Chat.Interactions.ViewModels
 @using CrestApps.OrchardCore.AI.Core
 @using OrchardCore
